fix: hero text spilling over hero img in laptop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,7 @@ main {
 #hero-text {
     font-size: 0.5rem;
     width: 40%;
-    position: relative;
+    position: sticky;
     top: 68%;
     left: 40%;
     text-align: center;
